fix: Improve Performance when pasting Artwork from clipboard